<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding = "10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvBookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_label"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvBookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_label"/>

    <TextView
        android:id="@+id/tvBookPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publisher_label"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBookYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/year_label"/>

        <TextView
            android:id="@+id/tvBookPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price_label"/>

    </LinearLayout>
</LinearLayout>